--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(68, 177, 54, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
@@ -23,6 +23,7 @@ a:hover {
 }
 
 body {
+  background-color: rgb(166, 133, 72);
   margin: 0;
   display: flex;
   place-items: center;
