--- a/src/style.css
+++ b/src/style.css
@@ -1,97 +1,166 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(68, 177, 54, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {box-sizing: border-box;}
+body {margin: 0; padding: 0; font-family: sans-serif; overflow: hidden;
+background-color: green;
+}
+div {
+    margin: 0;
+    padding: 0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+
+#interface2D, #view3D {
+    position: absolute;
+    top: 0;
+    left: 0;
+    outline: none;
 }
-a:hover {
-  color: #535bf2;
+#interface2D {
+    width: 100%;
+    height: 100%;
+    z-index: 20;
+}
+#view3D {
+    width: 100%;
+    height: 100%;
+    z-index: -100;
+}
+#hidden-menu {
+    display: block;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+   
+}
+.hide {
+    display: none !important;
 }
 
-body {
+.popup {
 
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+    font-family: "Yusei Magic", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    display: block;
+    padding: 10px;
+    position: absolute;
+    min-width: 320px;
+    background-color: #f4f0e6;
+    transform: translateY(-50%) translateX(-50%);
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+    border-radius: 30px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 1);
+    min-height: 100px;
+    border: 1px solid #333; 
+    top: 50%;
+    left: 50%;         
 }
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.avatar {
+    display: flex;;
+    margin-bottom: 20px;
+    gap: 10px;
+     
 }
 
-.card {
-  padding: 2em;
+.avatar-message h2.name {
+    font-size: 1em;
+    font-weight: bold;
+    margin: 0;
 }
 
-.read-the-docs {
-  color: #888;
+.avatar-message .message {
+    font-size: 1.5em;
+    margin: 0;
+}
+.avatar-profile img, .avatar-thumb img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: 3px solid #333;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .5);
+    
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.popup .reply {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    
+    padding: 20px;
+    background-color: #ddd;
+    border-radius: 20px;
+    justify-content: center;
+    
 }
-button:hover {
-  border-color: #646cff;
+.btn-group {
+
+    padding-right: 10px;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.reply-button {
+    font-family: "Yusei Magic", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    padding: 10px 20px;
+    margin: 10px 10px;
+    border: none;
+    border-radius: 50px;
+    background-color: #f4f0e6;
+
+    border: 3px solid #333;
+    cursor: pointer;
+    text-align: left;
+}
+.reply-button:active {
+    background-color: #4e4b4a;
+    color: #ebebeb;
+    box-shadow: none;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.shd-negative {
+
+    box-shadow: 5px 5px 0px rgba(187, 0, 0, 0.5);
+
+}
+
+.shd-positive {
+    box-shadow: 5px 5px 0px rgba(7, 90, 7, 0.5);
+}
+
+.shd-neutral {
+    box-shadow: 5px 5px 0px rgba(20, 20, 236, 0.5);
+}
+#inactive-ui {
+    position:absolute;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    padding: 15px;
+
+}
+
+.material-symbols-outlined {
+    display: block;
+    font-family: 'Material Symbols Outlined';
+    font-size: 2em;
+    color: #ececec;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
+.avatar-thumb img {
+    width: 40px;
+    height: 40px;
+    border-width: 2px;
+}
+.avatar-thumb .name {
+    font-size: 1em;
+    font-weight: bold;
+    color:#ebebeb;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    margin: 0;
 }
