--- a/src/style.css
+++ b/src/style.css
@@ -8,12 +8,61 @@ div {
 }
 
 
-#interface2D, #view3D {
+#interface2D, #view3D, #loading-screen {
     position: absolute;
     top: 0;
     left: 0;
     outline: none;
 }
+#loading-screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    color: #f4f0e6;
+    font-family: "Yusei Magic", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1em;
+    text-align: center;
+    z-index: 100;
+}
+#loading-screen h1{
+    color: #fff;
+    margin: 0;
+}
+
+#loading-screen img {
+    width: 60vw;
+    
+    margin-bottom: 2em;
+}
+
+#loading-screen small {
+    font-size: 0.8rem;
+    color: #f4f0e6;
+}
+
+#loading-screen .loading-message {
+    animation: fadeInOut 2s infinite alternate;
+
+
+}
+
+@keyframes fadeInOut {
+    0% {
+        color: #95d134;
+    }
+    50% {
+        color: #333;
+    }
+    100% {
+        color: #95d134;
+    }
+}
+
 #interface2D {
     width: 100%;
     height: 100%;
